Change bento to run for UC7

--- a/serving.ipynb
+++ b/serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3372fc7e-32d8-4d9d-bd22-90e9cc9eebef",
    "metadata": {},
    "outputs": [],
@@ -11,8 +11,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ebf9ded5-9698-4d32-a9c4-ec0ca742509c",
+   "metadata": {},
+   "source": [
+    "In order to test our solution, we first run the service without docker"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "d259a97b",
    "metadata": {},
    "outputs": [
@@ -20,33 +28,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/new_vol_300/opt/energy-forecasting-theo/model_registry/LightGBM_italy_serving\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-09-18T13:12:17+0200 [ERROR] [cli] Could not bind 0.0.0.0:3042\n"
+      "/new_vol_300/marija/conda/multiusers/iccs/model_serving/bento-example\n"
      ]
     }
    ],
    "source": [
     "!pwd\n",
-    "!bentoml serve service.py:lgbm_uc6_w4_pos_service --reload --host 0.0.0.0 --port 3042"
+    "!/opt/anaconda3/bin/bentoml serve service.py:model_service --reload --host 0.0.0.0 --port 3060"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5d7628f1",
+   "id": "6f156631-3d99-4da1-a03f-9ad18c9202fa",
    "metadata": {},
    "source": [
-    "## Run it in the notebook Make_predictions.ipynb that is created in this same folder"
+    "Then we build the docker container of the model after we modify bentofile.yaml's service name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "c4706669",
    "metadata": {},
    "outputs": [
@@ -54,10 +55,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building BentoML service \"lgbm_uc6_w6_pos_ac:f72fndswz2avgj6b\" from build context \"/new_vol_300/opt/energy-forecasting-theo/model_registry/lgbm_uc6_w6_pos_ac_serving\"\n",
-      "Packing model \"lgbm_uc6_w6_pos_ac:h37g4ycwzoavgj6b\"\n",
+      "Building BentoML service \"uc7_companies_no_covs:icw4j7furwxvh6qw\" from build context \"/new_vol_300/marija/conda/multiusers/iccs/model_serving/bento-example\"\n",
+      "Packing model \"uc7_companies_no_covs:ddzciyfuqcafv6qw\"\n",
       "Locking PyPI package versions..\n",
-      "\u001b[33mWARNING: --strip-extras is becoming the default in version 8.0.0. To silence this warning, either use --strip-extras to opt into the new default or use --no-strip-extras to retain the existing behavior.\u001b[0m\n",
+      "WARNING:pip._internal.metadata.base:Ignoring invalid distribution - (/opt/anaconda3/lib/python3.9/site-packages)\n",
+      "WARNING:pip._internal.metadata.base:Ignoring invalid distribution -arts (/opt/anaconda3/lib/python3.9/site-packages)\n",
+      "\u001b[31mCould not find a version that matches torch==1.11.0,>=1.12.0,>=1.8.0 (from -r /tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.txt (line 2))\n",
+      "Tried: 1.7.1, 1.8.0, 1.8.1, 1.9.0, 1.9.1, 1.10.0, 1.10.1, 1.10.2, 1.11.0, 1.12.0, 1.12.1, 1.13.0, 1.13.1, 2.0.0, 2.0.1, 2.1.0, 2.1.1, 2.1.2\n",
+      "There are incompatible versions in the resolved dependencies:\n",
+      "  torch==1.11.0 (from -r /tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.txt (line 2))\n",
+      "  torch>=1.8.0 (from u8darts[torch]==0.22.0->-r /tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.txt (line 6))\n",
+      "  torch>=1.12.0 (from pytorch-lightning==2.1.3->u8darts[torch]==0.22.0->-r /tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.txt (line 6))\u001b[0m\n",
+      "Failed locking PyPI packages: Command '['/opt/anaconda3/bin/python', '-m', 'piptools', 'compile', '/tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.txt', '--quiet', '--allow-unsafe', '--no-header', '--output-file=/tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.lock.txt']' returned non-zero exit status 2.\n",
+      "Falling back to using user-provided package requirement specifier, equivalent to `lock_packages=False`\n",
       "\n",
       "██████╗░███████╗███╗░░██╗████████╗░█████╗░███╗░░░███╗██╗░░░░░\n",
       "██╔══██╗██╔════╝████╗░██║╚══██╔══╝██╔══██╗████╗░████║██║░░░░░\n",
@@ -66,12 +76,12 @@
       "██████╦╝███████╗██║░╚███║░░░██║░░░╚█████╔╝██║░╚═╝░██║███████╗\n",
       "╚═════╝░╚══════╝╚═╝░░╚══╝░░░╚═╝░░░░╚════╝░╚═╝░░░░░╚═╝╚══════╝\n",
       "\n",
-      "Successfully built Bento(tag=\"lgbm_uc6_w6_pos_ac:f72fndswz2avgj6b\")\n"
+      "Successfully built Bento(tag=\"uc7_companies_no_covs:icw4j7furwxvh6qw\")\n"
      ]
     }
    ],
    "source": [
-    "!bentoml build"
+    "!/opt/anaconda3/bin/bentoml build"
    ]
   },
   {
@@ -90,9 +100,9 @@
    "outputs": [],
    "source": [
     "#sudo su\n",
-    "#export BENTOML_HOME=/home/theopnt/bentoml\n",
-    "#bentoml containerize lgbm_uc6_w6_pos_re:4qcmhtcwzsavgj6b\n",
-    "#docker run -it --rm -p 3042:3000 lgbm_uc6_w6_pos_re:4qcmhtcwzsavgj6b"
+    "#export BENTOML_HOME=/new_vol_300/marija/conda/multiusers/iccs/bentoml\n",
+    "#bentoml containerize uc7_companies_no_covs:icw4j7furwxvh6qw\n",
+    "#docker run -it --rm -p 3060:3000 uc7_companies_no_covs:icw4j7furwxvh6qw"
    ]
   }
  ],
@@ -112,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
