--- a/prediction_examples.ipynb
+++ b/prediction_examples.ipynb
@@ -5,7 +5,7 @@
    "id": "81082812-24ad-46b3-9c75-1f9bb4233915",
    "metadata": {},
    "source": [
-    "We first read the sample file and convert it to json formatWe first read the sample file and convert it to json format"
+    "We first read the sample file and convert it to json format. We first read the sample file and convert it to json format"
    ]
   },
   {
