--- a/save_model_as_bento.ipynb
+++ b/save_model_as_bento.ipynb
@@ -16,15 +16,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'bentoml'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbentoml\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmlflow\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdarts\u001b[39;00m \n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bentoml'"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -49,17 +48,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/01/16 16:01:27 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
-      " - darts (current: 0.23.1, required: darts==0.22.0)\n",
-      " - torch (current: 1.11.0, required: torch==1.11.0+cu102)\n",
-      " - mlflow (current: 1.27.0, required: mlflow==1.25.1)\n",
+      "2024/01/18 00:33:03 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
+      " - torch (current: 2.1.2, required: torch==1.11.0+cu102)\n",
       "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n"
      ]
     },
@@ -67,10 +64,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Local path inside _load_pyfunc: /new_vol_300/marija/conda/multiusers/iccs/bentoml/models/uc7_companies_no_covs/ddzciyfuqcafv6qw/mlflow_model/data/2850a79365524979819f69e9bbd55514\n",
-      "Local path altered for loading: /new_vol_300/marija/conda/multiusers/iccs/bentoml/models/uc7_companies_no_covs/ddzciyfuqcafv6qw/mlflow_model/data/2850a79365524979819f69e9bbd55514\n",
-      "/new_vol_300/marija/conda/multiusers/iccs/bentoml/models/uc7_companies_no_covs/ddzciyfuqcafv6qw/mlflow_model/data/2850a79365524979819f69e9bbd55514\n",
-      "/new_vol_300/marija/conda/multiusers/iccs/bentoml/models/uc7_companies_no_covs/ddzciyfuqcafv6qw/mlflow_model/data/2850a79365524979819f69e9bbd55514\n",
+      "Local path inside _load_pyfunc: /home/theo/bentoml/models/uc7_companies_no_covs/l7ddjq5vrcr4eabl/mlflow_model/data/2850a79365524979819f69e9bbd55514\n",
+      "Local path altered for loading: /home/theo/bentoml/models/uc7_companies_no_covs/l7ddjq5vrcr4eabl/mlflow_model/data/2850a79365524979819f69e9bbd55514\n",
+      "/home/theo/bentoml/models/uc7_companies_no_covs/l7ddjq5vrcr4eabl/mlflow_model/data/2850a79365524979819f69e9bbd55514\n",
+      "/home/theo/bentoml/models/uc7_companies_no_covs/l7ddjq5vrcr4eabl/mlflow_model/data/2850a79365524979819f69e9bbd55514\n",
       "\n",
       "Loading local PKL model...\n"
      ]
@@ -79,18 +76,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-16 16:01:44.647137: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-16 16:01:47.104628: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-01-16 16:01:48.002182: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2024-01-16 16:01:48.002211: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2024-01-16 16:01:48.381975: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-01-16 16:01:53.265777: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2024-01-16 16:01:53.265976: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2024-01-16 16:01:53.265987: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
-      "/opt/anaconda3/lib/python3.9/site-packages/pkg_resources/__init__.py:123: PkgResourcesDeprecationWarning: rts is an invalid version and will not be supported in a future release\n",
-      "  warnings.warn(\n",
-      "/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator MinMaxScaler from version 1.0.2 when using version 1.2.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "/home/theo/anaconda3/envs/test2/lib/python3.9/site-packages/statsforecast/core.py:26: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm\n",
+      "/home/theo/anaconda3/envs/test2/lib/python3.9/site-packages/sklearn/base.py:348: InconsistentVersionWarning: Trying to unpickle estimator MinMaxScaler from version 1.0.2 when using version 1.3.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n"
      ]
@@ -116,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model(tag=\"uc7_companies_no_covs:ddzciyfuqcafv6qw\")\n"
+      "Model(tag=\"uc7_companies_no_covs:hurwbr5vq6ituabl\")\n"
      ]
     }
    ],
@@ -149,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +321,7 @@
        "2023-12-28 23:00:00   4.695329"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
