Add all services

--- a/inergy-model-services/serving.ipynb
+++ b/inergy-model-services/serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "3372fc7e-32d8-4d9d-bd22-90e9cc9eebef",
    "metadata": {},
    "outputs": [],
@@ -11,16 +11,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ebf9ded5-9698-4d32-a9c4-ec0ca742509c",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "56cb2dbb-a063-4f71-a29d-16757cacc84d",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "In order to test our solution, we first run the service without docker"
+    "#!ls /usr/local/bin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "71525703-68ca-4f84-81c6-d14fafc8cace",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "d259a97b",
    "metadata": {},
    "outputs": [
@@ -28,26 +38,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/new_vol_300/marija/conda/multiusers/iccs/model_serving/bento-example\n"
+      "/new_vol_300/marija/conda/multiusers/iccs/model_serving/bento-example/inergy-model-services\n"
      ]
     }
    ],
    "source": [
     "!pwd\n",
-    "!/opt/anaconda3/bin/bentoml serve service.py:model_service --reload --host 0.0.0.0 --port 3060"
+    "#!/opt/anaconda3/bin/bentoml serve service.py:inergy_service --reload --host 0.0.0.0 --port 3090"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6f156631-3d99-4da1-a03f-9ad18c9202fa",
+   "id": "5d7628f1",
    "metadata": {},
    "source": [
-    "Then we build the docker container of the model after we modify bentofile.yaml's service name"
+    "## Run it in the notebook Make_predictions.ipynb that is created in this same folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "c4706669",
    "metadata": {},
    "outputs": [
@@ -55,18 +65,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building BentoML service \"uc7_companies_no_covs:icw4j7furwxvh6qw\" from build context \"/new_vol_300/marija/conda/multiusers/iccs/model_serving/bento-example\"\n",
-      "Packing model \"uc7_companies_no_covs:ddzciyfuqcafv6qw\"\n",
+      "Building BentoML service \"inergy_service:iayzuvg4rscbz6qw\" from build context \"/new_vol_300/marija/conda/multiusers/iccs/model_serving/bento-example/inergy-model-services\"\n",
+      "Packing model \"uc7_kmeans_euclidean_k14:5yqwuff4kgpq36qw\"\n",
+      "Packing model \"uc7_pool_apiu:r5iu4igrc6cuf6qw\"\n",
+      "Packing model \"lgbm_italy:25isa3w4aoatp6qw\"\n",
+      "Packing model \"uc7_households_apiu:3sj7flgrcwcuf6qw\"\n",
+      "Packing model \"uc7_charging_stations:4mr7l6grc2cuf6qw\"\n",
+      "Packing model \"nbeats_portugal:dgbmdtg4asatp6qw\"\n",
+      "Packing model \"uc7_companies_apiu:nfhdmywrc2cuf6qw\"\n",
+      "Packing model \"uc6_w4_reac:fok7enwqx2pf76qw\"\n",
+      "Packing model \"uc6_w4_ac:qxypbvwpkk74z6qw\"\n",
+      "Packing model \"uc6_w6_reac:r3paj2gqyg5hz6qw\"\n",
       "Locking PyPI package versions..\n",
       "WARNING:pip._internal.metadata.base:Ignoring invalid distribution - (/opt/anaconda3/lib/python3.9/site-packages)\n",
       "WARNING:pip._internal.metadata.base:Ignoring invalid distribution -arts (/opt/anaconda3/lib/python3.9/site-packages)\n",
-      "\u001b[31mCould not find a version that matches torch==1.11.0,>=1.12.0,>=1.8.0 (from -r /tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.txt (line 2))\n",
-      "Tried: 1.7.1, 1.8.0, 1.8.1, 1.9.0, 1.9.1, 1.10.0, 1.10.1, 1.10.2, 1.11.0, 1.12.0, 1.12.1, 1.13.0, 1.13.1, 2.0.0, 2.0.1, 2.1.0, 2.1.1, 2.1.2\n",
+      "\u001b[31mCould not find a version that matches torch==1.12.1,>=1.13.0,>=1.8.0 (from -r /tmp/tmp26ytzgjubentoml_bento_inergy_service/env/python/requirements.txt (line 2))\n",
+      "Tried: 1.7.1, 1.8.0, 1.8.1, 1.9.0, 1.9.1, 1.10.0, 1.10.1, 1.10.2, 1.11.0, 1.12.0, 1.12.1, 1.13.0, 1.13.1, 2.0.0, 2.0.1, 2.1.0, 2.1.1, 2.1.2, 2.2.0, 2.2.1\n",
       "There are incompatible versions in the resolved dependencies:\n",
-      "  torch==1.11.0 (from -r /tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.txt (line 2))\n",
-      "  torch>=1.8.0 (from u8darts[torch]==0.22.0->-r /tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.txt (line 6))\n",
-      "  torch>=1.12.0 (from pytorch-lightning==2.1.3->u8darts[torch]==0.22.0->-r /tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.txt (line 6))\u001b[0m\n",
-      "Failed locking PyPI packages: Command '['/opt/anaconda3/bin/python', '-m', 'piptools', 'compile', '/tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.txt', '--quiet', '--allow-unsafe', '--no-header', '--output-file=/tmp/tmpjxafxikvbentoml_bento_uc7_companies_no_covs/env/python/requirements.lock.txt']' returned non-zero exit status 2.\n",
+      "  torch==1.12.1 (from -r /tmp/tmp26ytzgjubentoml_bento_inergy_service/env/python/requirements.txt (line 2))\n",
+      "  torch>=1.8.0 (from u8darts[torch]==0.22.0->-r /tmp/tmp26ytzgjubentoml_bento_inergy_service/env/python/requirements.txt (line 7))\n",
+      "  torch>=1.13.0 (from pytorch-lightning==2.2.1->u8darts[torch]==0.22.0->-r /tmp/tmp26ytzgjubentoml_bento_inergy_service/env/python/requirements.txt (line 7))\u001b[0m\n",
+      "Failed locking PyPI packages: Command '['/opt/anaconda3/bin/python', '-m', 'piptools', 'compile', '/tmp/tmp26ytzgjubentoml_bento_inergy_service/env/python/requirements.txt', '--quiet', '--allow-unsafe', '--no-header', '--output-file=/tmp/tmp26ytzgjubentoml_bento_inergy_service/env/python/requirements.lock.txt']' returned non-zero exit status 2.\n",
       "Falling back to using user-provided package requirement specifier, equivalent to `lock_packages=False`\n",
       "\n",
       "██████╗░███████╗███╗░░██╗████████╗░█████╗░███╗░░░███╗██╗░░░░░\n",
@@ -76,7 +95,7 @@
       "██████╦╝███████╗██║░╚███║░░░██║░░░╚█████╔╝██║░╚═╝░██║███████╗\n",
       "╚═════╝░╚══════╝╚═╝░░╚══╝░░░╚═╝░░░░╚════╝░╚═╝░░░░░╚═╝╚══════╝\n",
       "\n",
-      "Successfully built Bento(tag=\"uc7_companies_no_covs:icw4j7furwxvh6qw\")\n"
+      "Successfully built Bento(tag=\"inergy_service:iayzuvg4rscbz6qw\")\n"
      ]
     }
    ],
@@ -101,16 +120,16 @@
    "source": [
     "#sudo su\n",
     "#export BENTOML_HOME=/new_vol_300/marija/conda/multiusers/iccs/bentoml\n",
-    "#bentoml containerize uc7_companies_no_covs:icw4j7furwxvh6qw\n",
-    "#docker run -it --rm -p 3060:3000 uc7_companies_no_covs:icw4j7furwxvh6qw"
+    "#bentoml containerize inergy_service:iayzuvg4rscbz6qw\n",
+    "#docker run -it --rm -p 3090:3000 inergy_service:iayzuvg4rscbz6qw"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9",
    "language": "python",
-   "name": "python3"
+   "name": "py3.9"
   },
   "language_info": {
    "codemirror_mode": {
